--- a/pride-inspector/branches/development/src/main/resources/help/html/usage/ui/menu_and_toolbar.html
+++ b/pride-inspector/branches/development/src/main/resources/help/html/usage/ui/menu_and_toolbar.html
@@ -29,7 +29,8 @@
     <!-- table of contents -->
     <div class="introduction">
         <p>
-            PRIDE Inspector's menus and toolbars provide access to the main functions. The main menu and toolbar contains
+            PRIDE Inspector's menus and toolbars provide access to the main functions. The main menu and toolbar
+            contains
             actions that affect the data content at the file or database level. Some of the actions are duplicated in
             both the menus and toolbars for quick access.
         </p>
@@ -102,8 +103,13 @@
                     Export data from the data source in the current view into various file formats, you can export four
                     different types of data:
                 <ul>
+                    <li><span class="keyword">PRIDE XML</span> - export an experiment into <a
+                            href="http://www.ebi.ac.uk/pride/schemaDocumentation.do">PRIDE XML format</a> file,
+                        this option is only available if you are viewing an experiment from PRIDE public instance.
+                    </li>
                     <li><span class="keyword">Spectra (.mgf)</span> - exports all spectra into a <a
-                            href="http://www.matrixscience.com/help/data_file_help.html#GEN">Mascot Generic Format</a> file
+                            href="http://www.matrixscience.com/help/data_file_help.html#GEN">Mascot Generic Format</a>
+                        file
                     </li>
                     <li><span class="keyword">Spectrum Details</span> - exports spectrum related information, such as:
                         ms level, precursor charge,
@@ -111,8 +117,10 @@
                         using programs like Microsoft Excel.
                     </li>
                     <li>
-                        <span class="keyword">Protein-Peptide Mappings</span> - exports all proteins together with their corresponding
-                        peptides into a tab delimited text file. No filtering of the data is done and duplicate peptide entries are exported as well.
+                        <span class="keyword">Protein-Peptide Mappings</span> - exports all proteins together with their
+                        corresponding
+                        peptides into a tab delimited text file. No filtering of the data is done and duplicate peptide
+                        entries are exported as well.
                     </li>
                     <li>
                         <span class="keyword">Protein Details</span> - exports all the protein related information, such
@@ -133,7 +141,8 @@
                 <h3>Help Menu</h3>
 
                 <p>
-                    Help Menu contains links to the help document. It provides additional information about PRIDE Inspector and
+                    Help Menu contains links to the help document. It provides additional information about PRIDE
+                    Inspector and
                     contains a page to provide us with feedback.
                 </p>
 
@@ -142,7 +151,8 @@
                 <p>
                     The main toolbar contains four key commands:
                 <ul>
-                    <li><span class="keyword"><a href="../open_file.html">Open File Toolbar</a></span> - opens a single or
+                    <li><span class="keyword"><a href="../open_file.html">Open File Toolbar</a></span> - opens a single
+                        or
                         multiple mzML/PRIDE XML files.
                     </li>
                     <li><span class="keyword"><a href="../connect_pride_db.html">Connect PRIDE Public Database
