--- a/pride-inspector/branches/development/src/main/resources/help/html/usage/ui/welcome.html
+++ b/pride-inspector/branches/development/src/main/resources/help/html/usage/ui/welcome.html
@@ -19,7 +19,8 @@
     <table width="100%" border="0" cellspacing="0" cellpadding="0" style="border-collapse:collapse;">
         <tr>
             <td align="left" class="topicpath">
-                <a href="../user_interface.html">Previous</a> | <a href="menu_and_toolbar.html">Next</a> | <a href="#topicSeeAlsoTopicsList">See Also</a>
+                <a href="../user_interface.html">Previous</a> | <a href="menu_and_toolbar.html">Next</a> | <a
+                    href="#topicSeeAlsoTopicsList">See Also</a>
             </td>
             <td width="70%" class="topicpath"></td>
         </tr>
@@ -32,6 +33,7 @@
             From this screen, you can quickly access the major functions of PRIDE Inspector.
         </p>
         <br>
+
         <p>The Welcome Screen is divided into four sections: </p>
         <ul>
             <li><a href="#quick_start">Quick Start</a></li>
@@ -45,43 +47,48 @@
     <div id="content">
         <div class="section">
             <div class="piProcedureSteps">
-            <a name="quick_start"></a>
+                <a name="quick_start"></a>
 
-            <h3> Quick Start</h3>
-            <p>
-                Use the buttons in this section to <a href="../open_file.html">Open mzML/PRIDE XML Files</a>,
-                <a href="../connect_pride_db.html">Connect to the PRIDE Public Database</a>,
-                <a href="../download_pride_exp.html">download private PRIDE experiments</a> and read the help documents.
-            </p>
+                <h3> Quick Start</h3>
 
-            <a name="try_examples"></a>
+                <p>
+                    Use the buttons in this section to <a href="../open_file.html">Open mzML/PRIDE XML Files</a>,
+                    <a href="../connect_pride_db.html">Connect to the PRIDE Public Database</a>,
+                    <a href="../download_pride_exp.html">download private PRIDE experiments</a> and read the help
+                    documents.
+                </p>
 
-            <h3>Try Examples</h3>
+                <a name="try_examples"></a>
 
-            <p>
-                Use the two buttons in this section to open an mzML or PRIDE XML example file.
-                These files included in the PRIDE Inspector installation.
-            </p>
+                <h3>Try Examples</h3>
 
-            <a name="learn_more_about"></a>
+                <p>
+                    Use the buttons in this section to open either an mzML or an PRIDE XML example file.
+                    These files are included in the PRIDE Inspector installation. Alternatively, click on more to
+                    download additional examples from our website.
+                </p>
 
-            <h3>Learn More About</h3>
+                <a name="learn_more_about"></a>
 
-            <p>
-                This section provides quick links to some of the most important topics in the help section.
-                <br>
-                The topics include: <a href="../../faq/pride.html">PRIDE</a>, <a href="../../faq/pride_xml.html">PRIDE XML</a>,
-                <a href="../../faq/pride_db.html">PRIDE Public Database</a>, <a href="../../faq/mzml.html">mzML</a>,
-                <a href="../download_pride_exp.html">Private Download</a>, <a href="../view_chart.html">Summary Charts</a>
-            </p>
+                <h3>Learn More About</h3>
 
-            <a name="feedback"></a>
+                <p>
+                    This section provides quick links to some of the most important topics in the help section.
+                    <br>
+                    The topics include: <a href="../../faq/pride.html">PRIDE</a>, <a href="../../faq/pride_xml.html">PRIDE
+                    XML</a>,
+                    <a href="../../faq/pride_db.html">PRIDE Public Database</a>, <a href="../../faq/mzml.html">mzML</a>,
+                    <a href="../download_pride_exp.html">Private Download</a>, <a href="../view_chart.html">Summary
+                    Charts</a>
+                </p>
 
-            <h3>Feedback</h3>
+                <a name="feedback"></a>
 
-            <p>
-                This button opens your local email client, which allows you to write an email to the PRIDE HelpDesk.
-            </p>
+                <h3>Feedback</h3>
+
+                <p>
+                    This button opens your local email client, which allows you to write an email to the PRIDE HelpDesk.
+                </p>
             </div>
         </div>
     </div>
