--- a/pride-inspector/branches/development/src/main/resources/help/html/usage/quant_prinicple.html
+++ b/pride-inspector/branches/development/src/main/resources/help/html/usage/quant_prinicple.html
@@ -48,7 +48,7 @@
         	<p>
         		New methods to quantify proteins in MS based proteomics are constantly being developed.
         		Therefore, it is very difficult to define a common way to represent this heterogeneous 
-        		data. The PRIDE database is focused on storing proteomics data that is part fo a 
+        		data. The PRIDE database is focused on storing proteomics data that is part of a 
         		manuscript or publication. Therefore, we decided to build the support for quantitative 
         		data in PRIDE XML files around the requirements for this specific task.
         	</p>
