Added quantification principle page to the help document.

--- a/pride-inspector/branches/development/src/main/resources/help/html/faq/deltamz.html
+++ b/pride-inspector/branches/development/src/main/resources/help/html/faq/deltamz.html
@@ -38,7 +38,7 @@
             </ul>
         </p>
 
-        <div class="tip">
+        <div class="note">
             The calculation can be broken down into the following steps:
             <ul>
                 <li>Calculate the sum of the mass of all the amino acids in the peptide.</li>
