--- a/pride-inspector/branches/development/src/main/resources/help/html/faq/pride_db.html
+++ b/pride-inspector/branches/development/src/main/resources/help/html/faq/pride_db.html
@@ -33,13 +33,13 @@
             the public experiments which is available on <a href="http://www.ebi.ac.uk/pride/">PRIDE Main Website</a>,
             it updated periodically with newly availabled PRIDE experiments.
         </p>
-        <div class="tip">
+        <div class="note">
                 The data submitted to PRIDE will be private by default, we will not make them public without the submitter's permission.
             If you are a submitter to PRIDE and you want to make your private experiments public, you can send your requests to <a
                 href="mailto:pride-support@ebi.ac.uk">PRIDE HelpDesk</a>.
         </div>
 
-        <div class="tip">
+        <div class="note">
                 The update on PRIDE public instance is run periodically, which unfortunately means the experiments has just been made public on <a
                 href="http://www.ebi.ac.uk/pride/">PRIDE Main Website</a> will not be made available on PRIDE public instance immediately. But we will make this update as soon as possible.
         </div>
