--- a/pride-inspector/branches/development/src/main/resources/help/html/faq/pride_xml.html
+++ b/pride-inspector/branches/development/src/main/resources/help/html/faq/pride_xml.html
@@ -33,7 +33,7 @@
             addition, it allows experiment metadata to captured. It is main format to use if you would like to submit
             your data to PRIDE.
         </p>
-        <div class="tip">
+        <div class="note">
             Please refer to our online documentation if you want a detailed description on PRIDE XML:
             <br>
             <a href="http://www.ebi.ac.uk/pride/schemaXmlspyDocumentation.do">PRIDE XML</a>
