--- a/pride-inspector/branches/development/src/main/resources/help/html/usage/browse/mzgraph.html
+++ b/pride-inspector/branches/development/src/main/resources/help/html/usage/browse/mzgraph.html
@@ -62,7 +62,7 @@
 
                 <h3>Spectrum/Chromatogram Details</h3>
 
-                <div class="tip">
+                <div class="note">
                     <p>
                     To save memory space and provide a faster user interface, only the first 200 spectra / chromatograms are initially loaded. 
                     </p>
