--- a/pride-inspector/branches/development/src/main/resources/help/html/usage/browse/quant.html
+++ b/pride-inspector/branches/development/src/main/resources/help/html/usage/browse/quant.html
@@ -52,6 +52,13 @@
 
     <div class="note">
         <p>
+            You can get more information about the principles behind these quantitative data from:
+            <a href="../quant_principle.html">Quantification Principles</a>
+        </p>
+    </div>
+
+    <div class="note">
+        <p>
             If you want to focus on just one section of the data, you can use the little arrows on the split bar to hide
             and
             show component.
@@ -72,7 +79,7 @@
         protein table.
         It shows the <span class="keyword">Method</span> of quantification technique, such as: ITRAQ.
 
-    <div class="tip">
+    <div class="note">
         <p>
             You can set the control sample by clicking on the <span class="annotation">Set Control Sample</span> button
             on top of the protein quantification table. Every time a new control sample is set, the columns which
@@ -81,7 +88,7 @@
         </p>
     </div>
 
-    <div class="tip">
+    <div class="note">
         <p>
             Click on <span class="annotation">Decoy Filter</span> to set a filter to show or hide decoy protein
             identifications
@@ -183,7 +190,7 @@
         </tr>
     </table>
 
-    <div class="tip">
+    <div class="note">
         A bar chart is drawn for each quantification value, this is to better illustrate the results. For values are
         less than 1, a red bar is shown, for values are greater than 1, a blue bar is shown. The size of the bar
         represents the change of the quantity.
@@ -344,7 +351,7 @@
         Every time a new control sample is set, this hisgram will be updated automatically as well.
     </p>
 
-    <div class="tip">
+    <div class="note">
         <p>
             You can right click on the histogram to save the histogram, supported formats are: pdf, svg, png, jpeg and gif.
             You can also print the histogram by right click.
