--- a/pride-inspector/branches/development/src/main/resources/help/html/usage/download_pride_exp.html
+++ b/pride-inspector/branches/development/src/main/resources/help/html/usage/download_pride_exp.html
@@ -127,7 +127,7 @@
                         <td>Checkbox which you can select which experiment to download</td>
                     </tr>
                 </table>
-                <div class="tip">
+                <div class="note">
                     You can choose whether to open the files after downloading by checking <span class="keyword">Open after download</span>
                 </div>
             </div>
