--- a/pride-inspector/branches/development/src/main/resources/help/html/usage/open_file.html
+++ b/pride-inspector/branches/development/src/main/resources/help/html/usage/open_file.html
@@ -44,7 +44,7 @@
             </li>
         </ul>
 
-            <div class="tip">
+            <div class="note">
 
                 <div class="tipmark"></div>
                 <img src="../images/tip.gif">You can open multiple files at the same time (same or different format) by
