Added documentation for show/hide columns.

--- a/pride-inspector/branches/development/src/main/resources/help/html/usage/browse/mzgraph.html
+++ b/pride-inspector/branches/development/src/main/resources/help/html/usage/browse/mzgraph.html
@@ -29,7 +29,8 @@
     <!-- table of contents -->
     <div class="introduction">
         <p>
-            The Spectrum/Chromatogram Tab provides a spectrum/chromatogram centric view. All spectra and chromatogram from
+            The Spectrum/Chromatogram Tab provides a spectrum/chromatogram centric view. All spectra and chromatogram
+            from
             the data source are
             displayed in this area. It consists of two sections:
 
@@ -49,7 +50,8 @@
                 <h3>Spectrum/Chromatogram Browser</h3>
 
                 <p>
-                    The Spectrum/Chromatogram Browser displays the spectrum / chromatogram selected in the spectra / chromatogram
+                    The Spectrum/Chromatogram Browser displays the spectrum / chromatogram selected in the spectra /
+                    chromatogram
                     table below.
                     <br>
                     For more details, please refer to: <a href="../mzgraph/spectra.html">Spectrum Browser</a>, <a
@@ -64,19 +66,24 @@
 
                 <div class="note">
                     <p>
-                    To save memory space and provide a faster user interface, only the first 200 spectra / chromatograms are initially loaded. 
+                        To save memory space and provide a faster user interface, only the first 200 spectra /
+                        chromatograms are initially loaded.
                     </p>
+
                     <p>
-                    The number of loaded spectra / chromatograms are displayed on the top left of the
-                    spectrum/chromatogram details table.
+                        The number of loaded spectra / chromatograms are displayed on the top left of the
+                        spectrum/chromatogram details table.
                     </p>
+
                     <p>
-                    You can click <span class="keyword">Load Next</span> to load the next 200, or you can load all by
-                    clicking <span class="keyword">Load All</span>
+                        You can click <span class="keyword">Load Next</span> to load the next 200, or you can load all
+                        by
+                        clicking <span class="keyword">Load All</span>
                     </p>
                 </div>
 
-                The table below gives a short description for every column in the spectrum table:
+                You can click on <img src="../../images/show_column.png" alt="Show/Hide Icon"/> to show or hide columns,
+                and the table below gives a short description for every column in the spectrum table:
                 <table class="piTable" width="100%" cellpadding="4" cellspacing="4">
                     <tr class="piRowHead">
                         <td width="20%">Column</td>
