--- a/pride-inspector/branches/development/src/main/resources/help/html/usage/browse/quant.html
+++ b/pride-inspector/branches/development/src/main/resources/help/html/usage/browse/quant.html
@@ -100,7 +100,8 @@
     </div>
 
     <p>
-        The table below gives a short description for every column in the protein table, most of them are hidden by
+        You can click on <img src="../../images/show_column.png" alt="Show/Hide Icon"/> to show or hide columns, and the
+        table below gives a short description for every column in the protein table, most of them are hidden by
         default, you can show them by clicking on the icon at the top-right corner of the table:
 
     <div class="note">
@@ -209,7 +210,8 @@
     </p>
 
     <p>
-        The table below gives a short description for every column in the peptide table, like the protein table, most of
+        You can click on <img src="../../images/show_column.png" alt="Show/Hide Icon"/> to show or hide columns, and the
+        table below gives a short description for every column in the peptide table, like the protein table, most of
         these columns will be hidden by default, you can show them by clicking at the table control icon on the
         top-right corner of the table.
     </p>
@@ -353,7 +355,8 @@
 
     <div class="note">
         <p>
-            You can right click on the histogram to save the histogram, supported formats are: pdf, svg, png, jpeg and gif.
+            You can right click on the histogram to save the histogram, supported formats are: pdf, svg, png, jpeg and
+            gif.
             You can also print the histogram by right click.
         </p>
     </div>
