--- a/pride-inspector/branches/development/src/main/resources/help/html/usage/quant_principle.html
+++ b/pride-inspector/branches/development/src/main/resources/help/html/usage/quant_principle.html
@@ -19,7 +19,7 @@
     <table width="100%" border="0" cellspacing="0" cellpadding="0" style="border-collapse:collapse;">
         <tr>
             <td align="left" class="topicpath">
-                <a href="export_quant.html">Previous</a> | <a href="../faq.html">Next</a> | <a
+                <a href="export_quant.html">Previous</a> | <a href="isoelectric_point.html">Next</a> | <a
                     href="#topicSeeAlsoTopicsList">See Also</a>
             </td>
             <td width="70%" class="topicpath"></td>
