--- a/pride-inspector/branches/mzidentml/src/main/resources/help/html/faq/mzml.html
+++ b/pride-inspector/branches/mzidentml/src/main/resources/help/html/faq/mzml.html
@@ -38,7 +38,7 @@
             of dataXML. The final name is mzML.
         </p>
 
-        <div class="tip">
+        <div class="note">
             Please refer to PSI's online documentation if you want a detailed description on mzML:
             <br>
             <a href="http://www.psidev.info/index.php?q=node/257">mzML</a>
