--- a/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/connect_pride_db.html
+++ b/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/connect_pride_db.html
@@ -33,7 +33,8 @@
         </p>
 
         <p>
-            The database is located at the EBI, Cambridge, and can be publicly accessed through the following address as well:
+            The database is located at the EBI, Cambridge, and can be publicly accessed through the following address as
+            well:
             <span class="control">193.62.194.210</span> using as username <span class="control">inspector</span>,
             password <span class="control">inspector</span> and the port <span class="control">5000</span>.
         </p>
@@ -57,13 +58,17 @@
     <!-- content -->
     <div id="content">
         <div class="section">
-            Once you are connected to the database, you can view the different experiments by using the navigation bar in the left hand side:
-            <li>if you know the experiment accession, you can enter it in the search box, and press <span class="control">Enter</span> or click the
-                <img src="../../../icon/16x16/find_experiment.png"> button
+            Once you are connected to the database, a search panel consists of two parts will be displayed:
+            <li><b>Search Box</b>: In this box, you can specify which metadata field you want to search
+                for. And the criteria for searching, as well as the search string. Once the search button is clicked,
+                the table below will show all the matching experiments.
             </li>
-            <li>you can navigate through the list of all the public experiments by scrolling down the experiments list and selecting the experiment you
-                would like to inspect
+            <li><b>Experiment Table</b>: This table contains all the matching experiments from the search, if no search
+                has been made, all the experiments are listed by default. At the top right corner above the table, the
+                number of visible experiments are shown. You can open the experiment by clicking on the plus sign at the
+                "View" column.
             </li>
+            <li><b>Close</b>: You can close the database search panel by clicking on the "Close" button.</Li>
         </div>
     </div>
 
