--- a/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/export.html
+++ b/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/export.html
@@ -19,7 +19,7 @@
     <table width="100%" border="0" cellspacing="0" cellpadding="0" style="border-collapse:collapse;">
         <tr>
             <td align="left" class="topicpath">
-                <a href="download_pride_exp.html">Previous</a> | <a href="../faq.html">Next</a> | <a
+                <a href="download_pride_exp.html">Previous</a> | <a href="export_quant.html">Next</a> | <a
                     href="#topicSeeAlsoTopicsList">See Also</a>
             </td>
             <td width="70%" class="topicpath"></td>
@@ -41,31 +41,55 @@
     <div id="content">
         <div class="section">
             <ul>
-                <li><span class="control">Spectra (.mgf)</span> will export into a <span class="control">mgf (Mascot Generic File)</span> file,
-                    the mz and intensity data for the spectra in that experiment. Once this option is selected in the <span class="menupath">Export | Spectrum
-                    (.mgf) </span>, you will need to choose from the pop-up window the file where the spectrum data will be stored.
+                <li><span class="control">PRIDE XML</span> will export into a <span
+                        class="control">PRIDE XML format</span> file.
+                    Once this option is selected in the <span class="menupath">Export | PRIDE XML </span>, you will need
+                    to choose from the pop-up window the file where the PRIDE XML will be stored.
                     <div class="warning">
                         <div class="warningmark"></div>
-                        <img src="../images/notice_purple.gif"> It will create 1 file for all spectrum in the experiment, so can potentially
+                        <img src="../images/notice_purple.gif"> As this will download the PRIDE XML from the PRIDE Web
+                        Servers, it might take a long time for larger files.
+                    </div>
+
+                </li>
+                <li><span class="control">Spectra (.mgf)</span> will export into a <span class="control">mgf (Mascot Generic File)</span>
+                    file,
+                    the mz and intensity data for the spectra in that experiment. Once this option is selected in
+                    the <span class="menupath">Export | Spectrum
+                    (.mgf) </span>, you will need to choose from the pop-up window the file where the spectrum data will
+                    be stored.
+                    <div class="warning">
+                        <div class="warningmark"></div>
+                        <img src="../images/notice_purple.gif"> It will create 1 file for all spectrum in the
+                        experiment, so can potentially
                         create a file bigger than hundred MB.
                     </div>
 
                 </li>
-                <li><span class="control">Spectrum Table</span> will export into a tab delimited file which contains all the values in the <span class="control">spectrum table.</span>
-                    When you select the <span class="menupath">Export | Spectrum Details, </span> a pop-up window will let you choose the location and name for the file to
+                <li><span class="control">Spectrum Table</span> will export into a tab delimited file which contains all
+                    the values in the <span class="control">spectrum table.</span>
+                    When you select the <span class="menupath">Export | Spectrum Details, </span> a pop-up window will
+                    let you choose the location and name for the file to
                     store all details.
                 </li>
-                <li><span class="control">Protein-Peptide Mappings</span> will export into a tab delimited file which contains the <span class="control">protein accession</span>
-                and <span class="control">peptide sequence</span> mappings. When you select the <span class="menupath">Export | Protein-Peptide Mappings,
+                <li><span class="control">Protein-Peptide Mappings</span> will export into a tab delimited file which
+                    contains the <span class="control">protein accession</span>
+                    and <span class="control">peptide sequence</span> mappings. When you select the <span
+                            class="menupath">Export | Protein-Peptide Mappings,
                 </span> a pop-up window will let you choose the location and name for the file to store the data
                 </li>
-                <li><span class="control">Protein Table</span> will export into a tab delimited file contains information about the proteins: <span class="control">
-                 Score, Threshold, Number of peptides, Number of distinct peptides and Number of PTMs and etc</span>. When you select the <span class="menupath">Export | Protein
-                 Table </span> option from the menu, a pop-up window will let you choose the location and name for the file to store the data.
+                <li><span class="control">Protein Table</span> will export into a tab delimited file contains
+                    information about the proteins: <span class="control">
+                 Score, Threshold, Number of peptides, Number of distinct peptides and Number of PTMs and etc</span>.
+                    When you select the <span class="menupath">Export | Protein
+                 Table </span> option from the menu, a pop-up window will let you choose the location and name for the
+                    file to store the data.
                 </li>
-                <li><span class="control">Peptide Table</span> will export into a tab delimited file contains information about the peptides: <span class="control">
+                <li><span class="control">Peptide Table</span> will export into a tab delimited file contains
+                    information about the peptides: <span class="control">
                  Peptide Sequence, PTM List, and etc</span>. When you select the <span class="menupath">Export | Peptide
-                 Table </span> option from the menu, a pop-up window will let you choose the location and name for the file to store the data.
+                 Table </span> option from the menu, a pop-up window will let you choose the location and name for the
+                    file to store the data.
                 </li>
             </ul>
         </div>
