--- a/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/open_file.html
+++ b/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/open_file.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" type="text/css" media="all" href="../css/s.css">
-    <title>Open PrideXML or MzML file</title>
+    <title>Open PRIDE XML or MzML file</title>
 </head>
 
 <body class="template">
@@ -29,7 +29,7 @@
 
     <!-- table of contents -->
     <div class="introduction">
-        <p>This chapter explains how to view PRIDE XML and MzML files with Pride Inspector.
+        <p>This chapter explains how to view PRIDE XML and MzML files with PRIDE Inspector.
             <br>
             You can open files in 3 different ways:
         </p>
@@ -44,7 +44,7 @@
             </li>
         </ul>
 
-            <div class="tip">
+            <div class="note">
 
                 <div class="tipmark"></div>
                 <img src="../images/tip.gif">You can open multiple files at the same time (same or different format) by
