--- a/pride-inspector/branches/mzidentml/src/main/resources/help/html/index.html
+++ b/pride-inspector/branches/mzidentml/src/main/resources/help/html/index.html
@@ -38,7 +38,7 @@
 
         <strong>Key Features</strong>:
         <ul>
-            <li>Fast loading of large mzML and PRIDE XML files.</li>
+            <li>Fast loading of large mzML/MzIdentML and PRIDE XML files.</li>
             <li>Direct access to all PRIDE public database experiments.</li>
             <li>Different views on spectra, chromatogram, protein, peptides and metadata.</li>
             <li>Visualization for all spectra and chromatograms, including automatic MS2 fragment ion annotations.</li>
