--- a/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/open_file.html
+++ b/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/open_file.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" type="text/css" media="all" href="../css/s.css">
-    <title>Open PRIDE XML or MzML file</title>
+    <title>Open PRIDE XML or MzML/MzIdentML files</title>
 </head>
 
 <body class="template">
@@ -12,7 +12,7 @@
 
     <!-- header -->
     <div id="header">
-        <h1>Opening MzML or PRIDE XML Files</h1>
+        <h1>Opening MzML/MzIdentML or PRIDE XML Files</h1>
     </div>
 
     <!-- navigation -->
@@ -34,7 +34,7 @@
             You can open files in 3 different ways:
         </p>
         <ul>
-            <li>From the <a href="ui/welcome.html">Welcome</a> screen, clicking on the <span class="control">Open mzML or PRIDE XML Files</span>
+            <li>From the <a href="ui/welcome.html">Welcome</a> screen, clicking on the <span class="control">Open mzML/MzIdentML or PRIDE XML Files</span>
                 icon
             </li>
             <li>From the <span class="menupath">File | Open File</span> option in the menu bar
