--- a/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/ui/menu_and_toolbar.html
+++ b/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/ui/menu_and_toolbar.html
@@ -66,7 +66,7 @@
                     File Menu contains commands for opening and closing data sources.
                 <ul>
                     <li><span class="keyword"><a href="../open_file.html">Open File</a></span> - opens single or
-                        multiple mzML/PRIDE XML files.
+                        multiple mzML/MzIdentML/PRIDE XML files.
                     </li>
                     <li><span class="keyword"><a href="../connect_pride_db.html">Connect PRIDE Database</a></span> -
                         connects to the PRIDE public database,
@@ -153,7 +153,7 @@
                 <ul>
                     <li><span class="keyword"><a href="../open_file.html">Open File Toolbar</a></span> - opens a single
                         or
-                        multiple mzML/PRIDE XML files.
+                        multiple mzML/MzIdentML/PRIDE XML files.
                     </li>
                     <li><span class="keyword"><a href="../connect_pride_db.html">Connect PRIDE Public Database
                         Toolbar</a></span> - connects to the PRIDE
