starting merge two branches

--- a/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/open_file.html
+++ b/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/open_file.html
@@ -34,7 +34,7 @@
             You can open files in 3 different ways:
         </p>
         <ul>
-            <li>From the <a href="ui/welcome.html">Welcome</a> screen, clicking on the <span class="control">Open mzML/MzIdentML or PRIDE XML Files</span>
+            <li>From the <a href="ui/welcome.html">Welcome</a> screen, clicking on the <span class="control">Open mzML or PRIDE XML Files</span>
                 icon
             </li>
             <li>From the <span class="menupath">File | Open File</span> option in the menu bar
