--- a/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/ui/welcome.html
+++ b/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/ui/welcome.html
@@ -52,7 +52,7 @@
                 <h3> Quick Start</h3>
 
                 <p>
-                    Use the buttons in this section to <a href="../open_file.html">Open mzML/MzIdentML/PRIDE XML Files</a>,
+                    Use the buttons in this section to <a href="../open_file.html">Open mzML/PRIDE XML Files</a>,
                     <a href="../connect_pride_db.html">Connect to the PRIDE Public Database</a>,
                     <a href="../download_pride_exp.html">download private PRIDE experiments</a> and read the help
                     documents.
