--- a/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/export_quant.html
+++ b/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/export_quant.html
@@ -37,6 +37,7 @@
             <li><a href="#export">Export</a> - export filtered results into an tab-delimited file</li>
             <li><a href="#ensembl">Esemble View</a> - show all the filtered proteins in the Ensembl karyotype viewer.
             </li>
+            <li><a href="#reactome">Reactome Pathway</a> - show all the filtered proteins with their quantitative ratios in the Reactome pathways.</li>
         </ul>
         </p>
         <br>
@@ -80,13 +81,24 @@
             </div>
 
             <div class="piProcedureSteps">
-                <a name="spectrum"></a>
+                <a name="ensembl"></a>
 
                 <h3>Ensembl Viewer</h3>
 
                 <p>
                     This will map all the proteins in the protein table to the Ensembl Karyotype Viewer,
                     here is an <a href="http://www.ensembl.org/Mus_musculus/Location/Genome?type=ProteinAlignFeature;id=ATP5J_MOUSE;id=PROF2_MOUSE;id=COR1A_MOUSE;id=CHCH2_MOUSE;id=ECHA_MOUSE;id=ABCD3_MOUSE;id=MAL2_MOUSE">example</a>.
+                </p>
+            </div>
+
+            <div class="piProcedureSteps">
+                <a name="reactome"></a>
+
+                <h3>Reactome Pathway</h3>
+
+                <p>
+                    This will map all the proteins in the protein table to the Reactome pathways, please note that the time to calculate the results depends on the number of proteins and their quantitative values.
+                    The same feature can be found on <a href="http://www.reactome.org/ReactomeGWT/entrypoint.html#ExpressionDataUploadPage">Reactome's website</a>.
                 </p>
             </div>
         </div>
