mzIdentml branch commit: 1. add "Fragmentation Table" help html.

--- a/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/vis_mzgraph.html
+++ b/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/vis_mzgraph.html
@@ -33,6 +33,7 @@
         </p>
         <ul>
             <li><a href="mzgraph/spectra.html">Spectrum Browser</a></li>
+            <li><a href="mzgraph/fragmentation.html">Fragmentation Table</a></li>
             <li><a href="mzgraph/chromatogram.html">Chromatogram Browser</a></li>
         </ul>
     </div>
